<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/btn_refresh"
        app:iconTint="@color/primary"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_device_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:iconTint="@color/primary"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_forget"
        android:icon="@drawable/ic_delete"
        android:title="@string/btn_forget"
        app:iconTint="@color/accent"
        app:showAsAction="never" />
    
</menu>